--- a/templatemo_569_edu_meeting/login.html
+++ b/templatemo_569_edu_meeting/login.html
@@ -22,7 +22,7 @@
 
   <body class="text-center">
     <form class="form-signin">
-      <img class="mb-4" src="assets/images/loginLogo.png" alt="" width="339" height="90">
+      <img class="mb-4" src="assets/images/logo.png" alt="" width="339" height="90">
       <h1 class="h3 mb-3 font-weight-normal">⚓Please sign in</h1>
       <label for="inputEmail" class="sr-only"></label>
       <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
