--- a/templatemo_569_edu_meeting/register.html
+++ b/templatemo_569_edu_meeting/register.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <link rel="stylesheet" href="css/regis_core.css">
+  <link rel="stylesheet" href="assets/css/regis_style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 
   <!-- basic -->
   <meta charset="utf-8">
@@ -42,47 +44,6 @@
 <body>
 
 
-  <header>
-    <!-- header inner -->
-    <div class="header">
-       <div class="container-fluid">
-          <div class="row">
-             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                <div class="full">
-                   <div class="center-desk">
-                      <div class="logo">
-                         <a href="index.html"><img src="images/logo.png" alt="#" /></a>
-                      </div>
-                   </div>
-                </div>
-             </div>
-             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-                   </button>
-                   <div class="collapse navbar-collapse" id="navbarsExample04">
-                      <ul class="navbar-nav mr-auto">
-                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Contact Us</a>
-                         </li>
-                         <li class="nav-item">
-                            <a class="nav-link" href="login.html" >Login </a>
-                         </li>
-                         <li class="nav-item">
-                            <a class="nav-link" href="register.html">Register</a>
-                         </li>
-                      </ul>
-                      <div class="sign_btn"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
-                   </div>
-                </nav>
-             </div>
-          </div>
-       </div>
-    </div>
- </header>
-
-
 
 
 
@@ -114,11 +75,6 @@
 
 
 
-    <div class="col-md-6">
-      <div class="text-img">
-        <figure><img src="images/toy_img.png" alt="#" /></figure>
-      </div>
-    </div>
 
   </section>
 
